[gd_scene load_steps=8 format=3 uid="uid://ctrj4pyx70xxi"]

[ext_resource type="Script" path="res://scenes/ui/message.gd" id="1_lfruy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gygq2"]

[sub_resource type="Animation" id="Animation_bm21m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vmmnm"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ynjvv"]
resource_name = "invisible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_crrqu"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3yf00"]
_data = {
"RESET": SubResource("Animation_bm21m"),
"appear": SubResource("Animation_vmmnm"),
"disappear": SubResource("Animation_crrqu"),
"invisible": SubResource("Animation_ynjvv")
}

[node name="Message" type="Node2D"]
script = ExtResource("1_lfruy")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Shape" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_gygq2")
debug_color = Color(0.184314, 0.611765, 0.568627, 0.419608)

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3yf00")
}
autoplay = "RESET"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 169.0
offset_bottom = 97.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
text = "sample sample sample "

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animator_animation_finished"]
